--- a/package.json
+++ b/package.json
@@ -14,22 +14,24 @@
         "email": "alix.lahuec@onmail.com"
     },
     "main": ".src/index.js",
-    "browser": "dist/roamToLatex.min.js",
-    "unpkg": "dist/roamToLatex.min.js",
+    "browser": "extension.js",
+    "unpkg": "extension.js",
     "scripts": {
-        "dev": "webpack --config webpack.dev.config.js",
-        "build": "webpack",
-        "lint": "eslint"
+        "build:roam": "webpack",
+        "lint": "eslint",
+        "ci:lint": "eslint --fix",
     },
     "devDependencies": {
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
-        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-react": "^7.18.6",
         "babel-loader": "^8.2.4",
         "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^4.0.0",
         "eslint": "^8.13.0",
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.4.0",
+        "mini-css-extract-plugin": "^2.6.1",
         "style-loader": "^3.3.1",
         "webpack": "^5.72.0",
         "webpack-cli": "^4.9.2",
@@ -41,7 +43,7 @@
         "@blueprintjs/select": "^4.1.2",
         "client-zip": "^2.0.1",
         "prop-types": "^15.8.1",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     }
 }
