chore: expand linting, add to gitignore, minor fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,26 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest/globals": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:react-hooks/recommended"
     ],
+    "globals": {
+        "PACKAGE_VERSION": "readonly"
+    },
     "ignorePatterns": ["webpack.*config.js"],
+    "overrides": [
+        {
+          "files": ["tests/**"],
+          "plugins": ["jest"],
+          "extends": ["plugin:jest/recommended"],
+          "rules": { "jest/prefer-expect-assertions": "off" }
+        }
+      ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -17,28 +29,72 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "jest"
     ],
     "rules": {
+        "arrow-spacing": "error",
+        "curly": [
+            "error",
+            "all"
+        ],
+        "default-case": "error",
+        "dot-notation": "warn",
         "indent": [
             "error",
             "tab"
+        ],
+        "key-spacing": [
+            "error",
+            { "beforeColon": false, "afterColon": true, "mode": "strict" }
         ],
         "linebreak-style": [
             "error",
             "windows"
         ],
+        "no-alert": "error",
+        "no-await-in-loop": "warn",
+        "no-duplicate-imports": [
+            "error",
+            { "includeExports": true }
+        ],
+        "no-implicit-coercion": "warn",
+        "no-label-var": "error",
+        "no-param-reassign": "error",
+        "no-shadow": "error",
         "no-unused-vars": [
             "error",
             { "ignoreRestSiblings": true, "argsIgnorePattern": "^_" }
         ],
+        "no-var": "error",
+        "object-curly-spacing": [
+            "warn",
+            "always"
+        ],
+        "prefer-const": "warn",
         "quotes": [
             "error",
             "double"
         ],
+        "require-await": "error",
         "semi": [
             "error",
             "always"
+        ],
+        "sort-imports": [
+            "warn",
+            { "allowSeparatedGroups": true }
+        ]
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        },
+        "linkComponents": [
+            {
+                "name": "ButtonLink",
+                "linkAttribute": "href"
+            }
         ]
     }
 }
