--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+
 # Dependency directories
 node_modules/
+
+# Optional npm cache directory
+.npm
 
 # Optional eslint cache
 .eslintcache
@@ -10,3 +25,12 @@ node_modules/
 
 # Draft files
 draft_*
+
+# User templates
+templates/
+
+# Storybook build
+storybook-static/
+
+# VSCode workspace
+*.code-workspace
