--- a/package.json
+++ b/package.json
@@ -20,17 +20,26 @@
         "build:roam": "webpack",
         "lint": "eslint",
         "ci:lint": "eslint --fix",
+        "test": "jest",
+        "ci:test": "jest --ci --collectCoverage"
     },
     "devDependencies": {
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.18.6",
+        "@testing-library/react": "^12.1.5",
+        "@testing-library/react-hooks": "^8.0.1",
+        "babel-jest": "^28.1.3",
         "babel-loader": "^8.2.4",
         "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^4.0.0",
         "eslint": "^8.13.0",
+        "eslint-plugin-jest": "^26.8.0",
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.4.0",
+        "jest": "^27.5.1",
+        "jest-environment-jsdom": "^27.5.1",
+        "jest-transform-css": "^4.0.1",
         "mini-css-extract-plugin": "^2.6.1",
         "style-loader": "^3.3.1",
         "webpack": "^5.72.0",
