--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,7 +84,9 @@
         "sort-imports": [
             "warn",
             { "allowSeparatedGroups": true }
-        ]
+        ],
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off"
     },
     "settings": {
         "react": {
