feat: fix newlines in figure, write tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
         "plugin:react-hooks/recommended"
     ],
     "globals": {
-        "PACKAGE_VERSION": "readonly"
+        "PACKAGE_VERSION": "readonly",
+        "global": "readonly"
     },
     "ignorePatterns": ["webpack.*config.js"],
     "overrides": [
