--- a/package.json
+++ b/package.json
@@ -21,14 +21,33 @@
         "lint": "eslint",
         "ci:lint": "eslint --fix",
         "test": "jest",
-        "ci:test": "jest --ci --collectCoverage"
+        "ci:test": "jest --ci --collectCoverage",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook --quiet",
+        "test-storybook": "test-storybook",
+        "ci:test-storybook": "test-storybook --coverage"
     },
     "devDependencies": {
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.18.6",
+        "@storybook/addon-a11y": "^6.5.10",
+        "@storybook/addon-actions": "^6.5.10",
+        "@storybook/addon-controls": "^6.5.10",
+        "@storybook/addon-coverage": "^0.0.3",
+        "@storybook/addon-essentials": "^6.5.10",
+        "@storybook/addon-interactions": "^6.5.10",
+        "@storybook/addon-links": "^6.5.10",
+        "@storybook/builder-webpack5": "^6.5.10",
+        "@storybook/cli": "^6.5.10",
+        "@storybook/jest": "^0.0.10",
+        "@storybook/manager-webpack5": "^6.5.10",
+        "@storybook/react": "^6.5.10",
+        "@storybook/test-runner": "^0.5.0",
+        "@storybook/testing-library": "^0.0.13",
         "@testing-library/react": "^12.1.5",
         "@testing-library/react-hooks": "^8.0.1",
+        "axe-playwright": "^1.1.11",
         "babel-jest": "^28.1.3",
         "babel-loader": "^8.2.4",
         "css-loader": "^6.7.1",
@@ -37,6 +56,7 @@
         "eslint-plugin-jest": "^26.8.0",
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.4.0",
+        "eslint-plugin-storybook": "^0.6.4",
         "jest": "^27.5.1",
         "jest-environment-jsdom": "^27.5.1",
         "jest-transform-css": "^4.0.1",
