--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
         "@blueprintjs/core": "^4.1.2",
         "@blueprintjs/icons": "^4.2.3",
         "@blueprintjs/select": "^4.1.2",
-        "client-zip": "^2.0.1",
+        "jszip": "^3.10.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
