--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "build-storybook": "build-storybook --quiet",
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
-        "release": "release-it minor --git.requireBranch=main",
+        "release": "release-it minor --git.requireBranch=main --only-version",
         "release:beta": "release-it minor --git.requireBranch=beta major --preRelease=beta",
         "release:preview": "release-it --dry-run"
     },
@@ -37,6 +37,7 @@
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.18.6",
+        "@release-it/conventional-changelog": "^5.0.0",
         "@storybook/addon-a11y": "^6.5.10",
         "@storybook/addon-actions": "^6.5.10",
         "@storybook/addon-controls": "^6.5.10",
