chore: add settings to changelog

--- a/.release-it.json
+++ b/.release-it.json
@@ -27,7 +27,9 @@
     },
     "plugins": {
         "@release-it/conventional-changelog": {
+            "header": "# Changelog",
             "infile": "CHANGELOG.md",
+            "strictSemVer": true,
             "preset": {
                 "name": "conventionalcommits",
                 "types": [
