feat: automate releases on push

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "build-storybook": "build-storybook --quiet",
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
-        "release": "release-it minor --git.requireBranch=main --only-version",
-        "release:beta": "release-it minor --git.requireBranch=beta major --preRelease=beta",
+        "release:latest": "release-it --git.requireBranch=main",
+        "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta",
         "release:preview": "release-it --dry-run"
     },
     "devDependencies": {
