chore: exclude auto-commits from changelog

--- a/.release-it.json
+++ b/.release-it.json
@@ -48,6 +48,10 @@
                     {
                         "type": "test",
                         "hidden": true
+                    },
+                    {
+                        "type": "auto-commit",
+                        "hidden": true
                     }
                 ]
             }
