chore: exclude chore commits from changelog

--- a/.release-it.json
+++ b/.release-it.json
@@ -42,6 +42,10 @@
                         "section": "Bug Fixes"
                     },
                     {
+                        "type": "chore",
+                        "hidden": true
+                    },
+                    {
                         "type": "refactor",
                         "hidden": true
                     },
