fix: prevent CI from running when releasing

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,9 @@
 name: CI
-on: [push]
+on:
+  push:
+    branches-ignore:
+      - main
+      - beta
 jobs:
   commit-checks:
     name: Lint, test, and build
