--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -15,6 +15,9 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v2
 
+      - name: NPM authentication
+        run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
+
       - name: Install packages
         run: npm ci --legacy-peer-deps
       
