chore: forbid using same version

--- a/.release-it.json
+++ b/.release-it.json
@@ -22,7 +22,7 @@
         "releaseName": "v${version}"
     },
     "npm": {
-        "allowSameVersion": true,
+        "allowSameVersion": false,
         "publish": true
     },
     "plugins": {
