--- a/.release-it.json
+++ b/.release-it.json
@@ -24,7 +24,9 @@
     },
     "plugins": {
         "@release-it/conventional-changelog": {
-            "from": "0.2.0",
+            "gitRawCommitsOpts": {
+                "from": "3c159c0ecfa242be0780c700f339c0876449c10e"
+            },
             "header": "# Changelog",
             "infile": "CHANGELOG.md",
             "skipUnstable": true,
