--- a/.release-it.json
+++ b/.release-it.json
@@ -9,7 +9,7 @@
         ]
     },
     "git": {
-        "commitMessage": "chore: release ${version}",
+        "commitMessage": "release: v${version}",
         "tag": true,
         "tagMatch": "[0-9]*\\.[0-9]*\\.[0-9]*"
     },
@@ -56,6 +56,14 @@
                     },
                     {
                         "type": "auto-commit",
+                        "hidden": true
+                    },
+                    {
+                        "type": "release",
+                        "hidden": true
+                    },
+                    {
+                        "type": "ci",
                         "hidden": true
                     }
                 ]
