chore(release): publish latest (#12)
* chore: improve release-it config (#2)
* chore: fix CI, release scripts (#3)
* chore: fix NPM auth (#4)
* chore: add git identity to release scripts (#5)
* chore: fix semver calculation (#6)
* chore: remove sig arg from commit (#7)
* chore: bump package version to trigger release
* chore: replace client-zip dep (#1)
* chore: update dependencies (#8)
* ci: update changelog settings (#9)
* style: improve dialog UI (#10)
* feat: setup settings panel (#11)

--- a/.release-it.json
+++ b/.release-it.json
@@ -9,20 +9,65 @@
         ]
     },
     "git": {
-        "commitArgs": ["-S"],
-        "commitMessage": "chore: release ${version}",
+        "commitMessage": "release: v${version}",
         "tag": true,
         "tagMatch": "[0-9]*\\.[0-9]*\\.[0-9]*"
     },
     "github": {
         "assets": ["extension.css", "extension.js"],
-        "autoGenerate": true,
-        "draft": true,
         "release": true,
         "releaseName": "v${version}"
     },
     "npm": {
-        "allowSameVersion": true,
+        "allowSameVersion": false,
         "publish": true
+    },
+    "plugins": {
+        "@release-it/conventional-changelog": {
+            "gitRawCommitsOpts": {
+                "from": "3c159c0ecfa242be0780c700f339c0876449c10e"
+            },
+            "header": "# Changelog",
+            "infile": "CHANGELOG.md",
+            "skipUnstable": true,
+            "strictSemVer": true,
+            "preset": {
+                "name": "conventionalcommits",
+                "types": [
+                    {
+                        "type": "feat",
+                        "section": "Features"
+                    },
+                    {
+                        "type": "fix",
+                        "section": "Bug Fixes"
+                    },
+                    {
+                        "type": "chore",
+                        "hidden": true
+                    },
+                    {
+                        "type": "refactor",
+                        "hidden": true
+                    },
+                    {
+                        "type": "test",
+                        "hidden": true
+                    },
+                    {
+                        "type": "auto-commit",
+                        "hidden": true
+                    },
+                    {
+                        "type": "release",
+                        "hidden": true
+                    },
+                    {
+                        "type": "ci",
+                        "hidden": true
+                    }
+                ]
+            }
+        }
     }
 }
