--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@alixlahuec/latex-roam",
-    "version": "0.2.0",
+    "version": "0.3.0-beta.0",
     "description": "Exporter to LaTeX for Roam Research users",
     "license": "Apache-2.0",
     "author": {
@@ -29,14 +29,15 @@
         "build-storybook": "build-storybook --quiet",
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
-        "release": "release-it minor --git.requireBranch=main",
-        "release:beta": "release-it minor --git.requireBranch=beta major --preRelease=beta",
+        "release:latest": "release-it --ci --git.requireBranch=main --npm.skipChecks",
+        "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta --npm.skipChecks",
         "release:preview": "release-it --dry-run"
     },
     "devDependencies": {
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.18.6",
+        "@release-it/conventional-changelog": "^5.0.0",
         "@storybook/addon-a11y": "^6.5.10",
         "@storybook/addon-actions": "^6.5.10",
         "@storybook/addon-controls": "^6.5.10",
@@ -58,8 +59,8 @@
         "babel-loader": "^8.2.4",
         "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^4.0.0",
-        "eslint": "^8.13.0",
-        "eslint-plugin-jest": "^26.8.0",
+        "eslint": "^8.22.0",
+        "eslint-plugin-jest": "^26.8.2",
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.4.0",
         "eslint-plugin-storybook": "^0.6.4",
@@ -74,10 +75,10 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@blueprintjs/core": "^4.1.2",
-        "@blueprintjs/icons": "^4.2.3",
-        "@blueprintjs/select": "^4.1.2",
-        "client-zip": "^2.0.1",
+        "@blueprintjs/core": "^3.54.0",
+        "@blueprintjs/icons": "^3.33.0",
+        "@blueprintjs/select": "^3.19.1",
+        "jszip": "^3.10.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
