stop creating GH releases for prereleases

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
         "release:latest": "release-it --ci --git.requireBranch=main --npm.skipChecks",
-        "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta --npm.skipChecks",
+        "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta --github.release=false --npm.skipChecks",
         "release:preview": "release-it --dry-run"
     },
     "devDependencies": {
