move Storybook testing to script, call in release workflows

--- a/.release-it.json
+++ b/.release-it.json
@@ -2,7 +2,8 @@
     "hooks": {
         "before:init": [
             "npm run ci:lint",
-            "npm run ci:test"
+            "npm run ci:test",
+            "./ci-storybook.sh"
         ],
         "after:bump": [
             "npm run build:roam"
