--- a/package.json
+++ b/package.json
@@ -78,12 +78,9 @@
         "@blueprintjs/core": "^3.54.0",
         "@blueprintjs/icons": "^3.33.0",
         "@blueprintjs/select": "^3.19.1",
-        "concurrently": "^7.3.0",
-        "http-server": "^14.1.1",
         "jszip": "^3.10.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "wait-on": "^6.0.1"
+        "react-dom": "^17.0.2"
     }
 }
