--- a/.release-it.json
+++ b/.release-it.json
@@ -12,7 +12,7 @@
         ]
     },
     "git": {
-        "changelog": "npx auto-changelog --stdout --unreleased",
+        "changelog": "npx auto-changelog --stdout",
         "commitMessage": "release: v${version}",
         "tag": true,
         "tagMatch": "[0-9]*\\.[0-9]*\\.[0-9]*"
