--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@alixlahuec/latex-roam",
-    "version": "0.4.0",
+    "version": "0.4.1-beta.0",
     "description": "Exporter to LaTeX for Roam Research users",
     "license": "Apache-2.0",
     "author": {
