--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@alixlahuec/latex-roam",
-    "version": "0.4.2",
+    "version": "0.4.3-beta.0",
     "description": "Exporter to LaTeX for Roam Research users",
     "license": "Apache-2.0",
     "author": {
@@ -29,8 +29,8 @@
         "build-storybook": "build-storybook --quiet",
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
-        "release:latest": "release-it --ci --git.requireBranch=main --npm.skipChecks",
-        "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta --github.release=false --npm.skipChecks",
+        "release:latest": "release-it --ci --git.requireBranch=main --github.releaseNotes=\"npx auto-changelog --stdout -p\" --npm.skipChecks",
+        "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\" --npm.skipChecks",
         "release:preview": "release-it --dry-run"
     },
     "devDependencies": {
