--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "build-storybook": "build-storybook --quiet",
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
-        "release:latest": "release-it --ci --git.requireBranch=main --github.releaseNotes=\"npx auto-changelog --stdout -p\" --npm.skipChecks",
+        "release:latest": "release-it --ci --git.requireBranch=main --github.autoGenerate --npm.skipChecks",
         "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\" --npm.skipChecks",
         "release:preview": "release-it --dry-run"
     },
