--- a/.release-it.json
+++ b/.release-it.json
@@ -8,11 +8,11 @@
         ],
         "after:bump": [
             "npm run build:roam",
-            "npx auto-changelog"
+            "npx auto-changelog -p"
         ]
     },
     "git": {
-        "changelog": "npx auto-changelog --stdout",
+        "changelog": "npx auto-changelog --stdout -u",
         "commitMessage": "release: v${version}",
         "tag": true,
         "tagMatch": "[0-9]*\\.[0-9]*\\.[0-9]*"
