--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -1,11 +1,8 @@
-name: Automatic pre-release
-on:
-  push:
-    branches: 
-      - beta
+name: Make new pre-release (beta)
+on: workflow_dispatch
 jobs:
-  release:
-    name: Make release
+  createReleasePR:
+    name: Create PR for release
     runs-on: ubuntu-latest
 
     steps:
@@ -13,26 +10,28 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v2
+          ref: main
 
-      - name: NPM authentication
-        run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
-      
-      - name: git config
-        run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      - uses: actions/setup-node@v2
 
       - name: Install packages
         run: npm ci --legacy-peer-deps
-      
-      - name: Release as beta
-        run: npm run release:beta
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
+      - name: Stage changes to version, changelog, build
+        run: |
+          npm run version:beta
+
+      # https://github.com/peter-evans/create-pull-request#action-outputs
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v4
         with:
-          directory: ./coverage/
-          verbose: true
+          branch: release/beta
+          delete-branch: true
+          draft: false
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "chore(release): publish beta"
+          commit-message: "auto-commit: staged changes"
+          labels: release
+          body: |
+            🤖 **Preparing to release as @beta**
