--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
 		"version": "release-it --ci --no-git --no-npm --no-github.release",
 		"version:latest": "npm run version -- --git.requireBranch=main",
 		"version:beta": "npm run version -- --preRelease=beta --git.requireBranch=beta",
-        "release:latest": "release-it --ci --git.requireBranch=main --github.autoGenerate --npm.skipChecks",
-        "release:beta": "release-it --ci --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\" --npm.skipChecks",
+		"publish": "release-it --ci --npm.skipChecks --no-increment",
+		"publish:latest": "npm run publish -- --git.requireBranch=main --github.autoGenerate",
+		"publish:beta": "npm run publish -- --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\"",
         "release:preview": "release-it --dry-run"
     },
     "devDependencies": {
