--- a/.github/workflows/create-prerelease.yaml
+++ b/.github/workflows/create-prerelease.yaml
@@ -14,6 +14,11 @@ jobs:
 
       - uses: actions/setup-node@v2
 
+      - name: git config
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
       - name: Install packages
         run: npm ci --legacy-peer-deps
 
