--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
 		"version": "release-it --ci --no-git --no-npm --no-github.release",
-		"version:latest": "npm run version -- --git.requireBranch=main",
-		"version:beta": "npm run version -- --preRelease=beta --git.requireBranch=beta",
+		"version:latest": "npm run version",
+		"version:beta": "npm run version -- --preRelease=beta",
 		"publish": "release-it --ci --npm.skipChecks --no-increment",
 		"publish:latest": "npm run publish -- --git.requireBranch=main --github.autoGenerate",
 		"publish:beta": "npm run publish -- --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\"",
