--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -22,6 +22,13 @@ jobs:
       - name: Install packages
         run: npm ci --legacy-peer-deps
 
+      - name: Get next version
+        id: version
+        run: |
+          next_version=$(npx release-it --release-version)
+          echo $next_version
+          echo "::set-output name=next::$next_version"
+
       - name: Get changelog
         id: changelog
         run: |
@@ -42,7 +49,7 @@ jobs:
           delete-branch: true
           draft: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: "chore(release): publish latest"
+          title: "chore(release): v${{ steps.version.outputs.next }}"
           commit-message: "auto-commit: staged changes"
           labels: release
           body: |
