--- a/.github/workflows/create-prerelease.yaml
+++ b/.github/workflows/create-prerelease.yaml
@@ -14,6 +14,9 @@ jobs:
 
       - uses: actions/setup-node@v2
 
+      - name: NPM authentication
+        run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
+
       - name: git config
         run: |
           git config user.name "${GITHUB_ACTOR}"
