--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -6,12 +6,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Setup release branch
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
           ref: main
 
+      - name: Create release branch
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: 'release/latest'
+
+      # Push commit from release-it: version bump, changelog, build
       - uses: actions/setup-node@v2
 
       - name: NPM authentication
@@ -43,6 +52,7 @@ jobs:
         run: |
           npm run version:latest
 
+      # Create PR for release branch
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
