--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
         "build-storybook": "build-storybook --quiet",
         "test-storybook": "test-storybook",
         "ci:test-storybook": "test-storybook --coverage",
-		"version": "release-it --ci --no-git.tag --no-npm.publish --no-github.release",
-		"version:latest": "npm run version",
-		"version:beta": "npm run version -- --preRelease=beta",
+		"version-release": "release-it --ci --no-git.tag --no-npm.publish --no-github.release",
+		"version-release:latest": "npm run version-release",
+		"version-release:beta": "npm run version-release -- --preRelease=beta",
 		"publish": "release-it --ci --npm.skipChecks --no-increment",
 		"publish:latest": "npm run publish -- --git.requireBranch=main --github.autoGenerate",
 		"publish:beta": "npm run publish -- --git.requireBranch=beta --preRelease=beta --github.releaseNotes=\"echo\"",
