--- a/.github/workflows/create-prerelease.yaml
+++ b/.github/workflows/create-prerelease.yaml
@@ -7,6 +7,11 @@ jobs:
 
     steps:
       # Setup release branch
+      - name: Delete existing branch
+        run: |
+          git push origin --delete release/beta
+        continue-on-error: true
+
       - name: Create release branch
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
@@ -36,7 +41,7 @@ jobs:
 
       - name: Stage changes to version, changelog, build
         run: |
-          npm run version:beta
+          npm run version-release:beta
 
       # Create PR for release branch
       - name: Create Pull Request
