--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -7,6 +7,11 @@ jobs:
 
     steps:
       # Setup release branch
+      - name: Delete existing branch
+        run: |
+          git push origin --delete release/latest
+        continue-on-error: true
+
       - name: Create release branch
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
@@ -50,7 +55,7 @@ jobs:
 
       - name: Stage changes to version, changelog, build
         run: |
-          npm run version:latest
+          npm run version-release:latest
 
       # Create PR for release branch
       - name: Create Pull Request
