--- a/.github/workflows/create-prerelease.yaml
+++ b/.github/workflows/create-prerelease.yaml
@@ -7,12 +7,6 @@ jobs:
 
     steps:
       # Setup release branch
-      - name: Delete existing branch
-        uses: dawidd6/action-delete-branch@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branches: 'release/beta'
-
       - name: Create release branch
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
@@ -49,7 +43,7 @@ jobs:
         id: cpr
         uses: repo-sync/pull-request@v2
         with:
-          destination_branch: "main"
+          destination_branch: "beta"
           source_branch: "release/beta"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr_draft: false
