--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -7,6 +7,13 @@ jobs:
 
     steps:
       # Setup release branch
+      - name: Delete existing branch
+        uses: dawidd6/action-delete-branch@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branches: 'release/latest'
+        continue-on-error: true
+
       - name: Create release branch
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
