infra: remove branch deletion, fix typo in release workflows (#40)

--- a/.github/workflows/create-prerelease.yaml
+++ b/.github/workflows/create-prerelease.yaml
@@ -12,6 +12,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branches: 'release/beta'
+        continue-on-error: true
 
       - name: Create release branch
         uses: peterjgrainger/action-create-branch@v2.2.0
@@ -49,7 +50,7 @@ jobs:
         id: cpr
         uses: repo-sync/pull-request@v2
         with:
-          destination_branch: "main"
+          destination_branch: "beta"
           source_branch: "release/beta"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr_draft: false
