--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Get next version
         id: version
         run: |
-          next_version=$(npx release-it --release-version)
+          next_version=$(npx release-it --release-version | tail -1)
           echo $next_version
           echo "::set-output name=next::$next_version"
 
